# desktop

./: .gitmodules  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
